minor fix and updated pdf

--- a/article/SmallLatticeReps.tex
+++ b/article/SmallLatticeReps.tex
@@ -2432,8 +2432,8 @@ is a \defn{minimal representation of} $\bL$ if the size
 $|A|$ of the universe of $\bA$ as small as possible. That is, we have a proof
 that no representation on a smaller algebra is possible.
 
-There is, however, a separate notion of smallness of a representation that might
-be worth considering.  Suppose we know that a lattice $L$ is representable as
+There is, however, a separate notion of smallness of a representation that is
+worth considering.  Suppose we know that a lattice $L$ is representable as
 an upper interval in the subgroup lattice of a finite.  We could ask, ``what is
 the smallest group $G$ such that $L \cong \lb H, G \rb$ for some $H\leq G$?''
 Alternatively, we could ask, ``what is the smallest number $n$ such that there are
