--- a/article/inputs/macros.sty
+++ b/article/inputs/macros.sty
@@ -32,8 +32,11 @@
 \newcommand{\Eq}{\ensuremath{\operatorname{Eq}}}
 \newcommand{\bEq}{\ensuremath{\mathbf{Eq}}}
 \newcommand{\bEqX}{\ensuremath{\mathbf{Eq}(X)}}
-\newcommand{\Con}{\ensuremath{\operatorname{Con\,}}}
-\newcommand{\bCon}{\ensuremath{\mathbf{Con\,}}}
+%% wjd: I'm removing the extra space. IMHO there's too much space. I think
+%%      $\Con \bA \cong \bL$ looks a little weird with the extra space,
+%%      especially when \Con is not set in bold font.
+\newcommand{\Con}{\ensuremath{\operatorname{Con}}}
+\newcommand{\bCon}{\ensuremath{\mathbf{Con}}}
 \newcommand{\Sub}{\ensuremath{\operatorname{Sub}}}
 \newcommand{\Sym}{\ensuremath{\operatorname{Sym}}}
 \newcommand{\End}{\ensuremath{\operatorname{End}}}
