removed false statement about A_4

--- a/article/SmallLatticeReps.tex
+++ b/article/SmallLatticeReps.tex
@@ -641,11 +641,9 @@ such that $L$ is isomorphic to the interval
 \lb H, G\rb := \{K \mid H \leq K \leq G\}.
 \]
 In this case, we call $\lb H, G\rb$ a \defn{group representation of} $L$.
-For obvious reasons, we take the \defn{size} of a group representation to be
-the index $[G:H]$. Group representations are rarely unique, but occasionally
-they are unique up to isomorphism.\footnote{For example, if $\lb H, G\rb$ is a
-  group representation of the subgroup lattice of $A_4$, then $H$ is normal in
-  $G$ and $G/H \cong A_4$.}
+We take the \defn{size} of a group representation to be
+the index $[G:H]$, since this is the size of the algebra $\bA = \<G/H, G\>$ that has
+congruence lattice $\Con(\bA) \cong L$.
 
 Not surprisingly many lattices with a group representation
 can be represented as a congruence lattice of a much smaller
