fixed index notation for consistency

--- a/article/SmallLatticeReps.tex
+++ b/article/SmallLatticeReps.tex
@@ -785,7 +785,7 @@ On the left, this lattice is presented as the upper interval
 $\lb C_2, C_3 \times S_3\rb$. On the right, it is the upper interval 
 $\lb \<e\>, C_{10}\rb$. Of course, the groups $C_{10}$ and
 $C_3 \times S_3$ have orders 10 and 18, but the respective indices are
-$|C_{10}:\<e\>| = 10$ and $|C_3 \times S_3:C_2|=9$. 
+$[C_{10}:\<e\>] = 10$ and $[C_3 \times S_3:C_2]=9$. 
 \begin{figure}
 \caption{Transitive G-set congruence lattices in Eq(10)}
 \label{fig:10}
