made index notation consistent

--- a/article/SmallLatticeReps.tex
+++ b/article/SmallLatticeReps.tex
@@ -777,7 +777,7 @@ subgroup lattices $L$ appears as an upper interval, say $L \cong \lb H, G\rb$.
 It's possible that there is a larger group $G^+$ in whose subgroup lattice $L$
 appears, but with a smaller index. That is, we may have
 \[\lb H, G \rb \cong L \cong \lb H^+, G^+\rb, \quad |G| < |G^+|,
-\quad |G^+:H^+| < |G:H|.\]
+\quad [G^+:H^+] < [G:H].\]
 We now give an example of this phenomenon. 
 
 In Figure~\ref{fig:10} there appears the lattice $\two\times \two$.
@@ -2439,7 +2439,7 @@ IsSubgroup(C,K);  # returns false
 \end{verbatim}
 }
 This shows lattice $\bL_{11}$ is representable on a set of size 216.
-In this example, where $\lb H,G \rb$ is the pentagon, the index is $\lb G:H \rb=36$.  
+In this example, where $\lb H,G \rb$ is the pentagon, the index is $[G:H]=36$.  
 
 Now, there might be a nontrivial subgroup $M < H$ such that in the interval
 $\lb M, G \rb$ there is a union of a filter and ideal in $\Sub(G)$ that is isomorphic to
